--- a/Calculator/ios/Podfile
+++ b/Calculator/ios/Podfile
@@ -12,6 +12,8 @@ target 'Caculator' do
     :hermes_enabled => false
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'CaculatorTests' do
     inherit! :complete
     # Pods for testing
