--- a/Calculator/package.json
+++ b/Calculator/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-text-gradient": "^0.1.7",
+    "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2"
   },
